--- a/pokemon-api.html
+++ b/pokemon-api.html
@@ -11,6 +11,7 @@
 
 <body>
   <h1>PokeDex</h1>
+  <h4>Gotta catch 'em all!</h4>
   <nav class="links"></nav>
   <main class="grid-fluid"></main>
   <script src="./script.js"></script>
